--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -11,6 +11,7 @@
 <body>
   <header th:replace="~{common/common}"></header>
   <main>
+    <a href="/thunder.html" style="text-decoration: none; text-decoration-line: none;">.</a>
     <section class="recommend">
       <h2>오늘의 추천 도서</h2>
       <div class="book-slider" id="bookSlider">
