--- a/src/main/resources/static/css/fragments/side-menu.css
+++ b/src/main/resources/static/css/fragments/side-menu.css
@@ -23,6 +23,7 @@
   display: flex;
   align-items: center;
   padding: 10px;
+  padding-right: 5px;
   border-radius: 8px;
   transition: background-color 0.3s ease, color 0.3s ease;
   text-decoration: none;
@@ -30,9 +31,15 @@
   margin-bottom: 0; 
 }
 
-.menu > a{
+.menu > a {
   text-decoration: none; 
-  color:#333;
+  color: #333;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .menu:hover {
