--- a/src/main/resources/templates/common/unLoginHeader.html
+++ b/src/main/resources/templates/common/unLoginHeader.html
@@ -57,7 +57,7 @@
             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                 data-bs-target="#modalLogin">로그인</button>
             <a href="/member/signUp" class="btn btn-primary headerJoinBtn">회원가입</a>
-            <a href="/cart" class="btn btn-primary headerCartBtn">장바구니</a>
+            <a href="#" class="btn btn-primary headerCartBtn" onclick="checkLoginForCart()">장바구니</a>
             <a href="/support" class="btn btn-primary headerJoinBtn">고객지원</a>
         </div>
     </header>
@@ -98,4 +98,12 @@
             </div>
         </div>
     </div>
+
+    <!-- 파일 끝에 스크립트 추가 -->
+    <script>
+    function checkLoginForCart() {
+        alert("로그인 회원만 이용 가능합니다. 로그인 후 이용 바랍니다.");
+        $('#modalLogin').modal('show');
+    }
+    </script>
 </div>
